# OOP_homework_lab2f

./: README.md
lab2/: CMakeLists.txt
lab2/include/: function.h
lab2/src/: function.cpp  program
lab2/test/: test_five.cpp
